# honeywell-tcc-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/api/: locations.rs  login.rs  mod.rs  zones.rs
tests/: locations.rs  set_temperature.rs
