[package]
name = "honeywell-tcc"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
license = "MIT OR Apache2.0"
readme = "README.md"
description = "Wrapper for the Honeywell TCC API"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"

[dev-dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.32.0", features = ["rt", "macros"] }